# pokersoc-connect

./: .gitignore  App.xaml  App.xaml.cs  BuyInWindow.xaml  BuyInWindow.xaml.cs  CMakeLists.txt  CashOutWindow.xaml  CashOutWindow.xaml.cs  CurrencyImageGenerator.cs  Database.cs  FloatWindow.xaml  FloatWindow.xaml.cs  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  ProductDialog.xaml  ProductDialog.xaml.cs  StartWindow.xaml  StartWindow.xaml.cs  VariantDialog.xaml  VariantDialog.xaml.cs  pokersoc-connect.sln  pokersoc_connect.csproj  schema.sql
Assets/Chips/: README.txt
Assets/Currency/: README.txt
Views/: BreakdownView.xaml  BreakdownView.xaml.cs  BuyInView.xaml  BuyInView.xaml.cs  CashOutBreakdownView.xaml  CashOutBreakdownView.xaml.cs  CashOutView.xaml  CashOutView.xaml.cs  CashboxView.xaml  CashboxView.xaml.cs  FoodCatalogView.xaml  FoodCatalogView.xaml.cs  FoodSaleDetailsView.xaml  FoodSaleDetailsView.xaml.cs  FoodSellView.xaml  FoodSellView.xaml.cs  LostChipsView.xaml  LostChipsView.xaml.cs  PlayerManagementView.xaml  PlayerManagementView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
src/: MainWindow.cpp  MainWindow.h  main.cpp
